03-k8-resources/01-namespace.yaml
apiVersion: v1 
kind: Namespace
metadata:
  name: roboshop
  labels:
    project: roboshop-1
    environment: dev
