03-k8-resources/03-multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container 
  labels:
    project: roboshop
    purpose: multi-container-demo
spec:
  containers:
  - name: nginx
    image: nginx
  - name: alamalinux
    image: alamalinux:9
