03-k8-resources/04-labels.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: labels
  labels:
    project: roboshop
    component: mysql
    tier: backend
    environment: dev
spec: 
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
