03-k8-resources/05-annotations.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: annotations
  labels:
    project: roboshop
    component: mysql
    tier: backend
    environment: dev
  annotations:
    description: "This pod is created to demonstrate pod annotations"
    jenkins: "https://jenkins.com/build/job/robosho-catalogue/3"
spec: 
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
