03-k8-resources/07-env.yaml
kind: Pod
apiVersion: v1
metadata:
  name: env
spec:
  containers:
  - name: nginx
    image: nginx
