03-k8-resources/09-pod-configmap.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: env-config
  labels:
    purpose: demo
spec: 
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
