03-k8-resources/11-pod-secret.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: env-secret
  labels:
    purpose: demo
spec: 
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
