03-k8-resources/17-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: sc-headless-service
  labels:
    app: statefulset_top-level
    project: roboshop_top-level
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: statefulset
    project: roboshop

---

apiVersion: v1
kind: Service
metadata:
  name: sc-normal-service
  labels:
    app: statefulset_top-level
    project: roboshop_top-level
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: statefulset
    project: roboshop

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset
spec:
  selector:
    matchLabels:
      app: statefulset
      project: roboshop # has to match .spec.template.metadata.labels
  serviceName: "sc-headless-service" # this should be service name
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: statefulset # has to match .spec.selector.matchLabels
        project: roboshop 
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: naginx-path
          mountPath: /usr/share/nginx/html
  # This is nothing but PVC, you can directly create here
  volumeClaimTemplates:
  - metadata:
      name: efs-dynamic-roboshop
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "efs-roboshop"
      resources:
        requests:
          storage: 2Gi
